--- a/Generals/Views/Home/Privacy.cshtml
+++ b/Generals/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>We will share everything you give us. So don't.</p>
