--- a/Generals/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Generals/Views/Shared/_CookieConsentPartial.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <p class="navbar-text">
-                    Use this space to summarize your privacy and cookie use policy.
+                    Privacy policy: Don't submit anything to this API that you don't want us to see.
                 </p>
                 <div class="navbar-right">
                     <a asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Learn More</a>
